--- a/srcs/benchmarking/CMakeLists.txt
+++ b/srcs/benchmarking/CMakeLists.txt
@@ -18,6 +18,7 @@ include_directories(${TENSORRT_INCLUDE_DIRS})
 link_directories(${TENSORRT_LIB_DIR})
 
 find_package(OpenCV REQUIRED COMPONENTS core imgproc highgui)
+find_package(fmt REQUIRED)
 
 include_directories(includes)
 
@@ -34,4 +35,5 @@ target_link_libraries(${PROJECT_NAME}
   nvinfer_plugin
   ${CUDA_LIBRARIES}
   stdc++fs
+  fmt::fmt
 )
