correct cmake to work with cuda filter

--- a/srcs/test_yolo_engine/CMakeLists.txt
+++ b/srcs/test_yolo_engine/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(test_engine)
+project(test_yolo)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD 17)
@@ -17,7 +17,7 @@ set(TENSORRT_LIB_DIR "/usr/lib/aarch64-linux-gnu")
 include_directories(${TENSORRT_INCLUDE_DIRS})
 link_directories(${TENSORRT_LIB_DIR})
 
-find_package(OpenCV REQUIRED COMPONENTS core imgproc highgui)
+find_package(OpenCV REQUIRED COMPONENTS core imgproc highgui cudaimgproc cudawarping cudafilters)
 
 include_directories(includes)
 
@@ -26,6 +26,7 @@ add_executable(${PROJECT_NAME}
   srcs/InferenceEngine.cpp
   srcs/utils.cpp
   srcs/Logger.cpp
+  srcs/ImageProcessor.cpp
 )
 
 target_link_libraries(${PROJECT_NAME}
@@ -35,3 +36,27 @@ target_link_libraries(${PROJECT_NAME}
   ${CUDA_LIBRARIES}
   stdc++fs
 )
+
+#
+#
+# //////
+#
+#
+#
+# target_link_libraries(${PROJECT_NAME}_node
+#   ${OpenCV_LIBS}
+#   nvinfer
+#   nvinfer_plugin
+#   cudart  # From CUDA
+# )
+#
+# ament_target_dependencies(${PROJECT_NAME}_node
+#   rclcpp
+#   sensor_msgs
+#   cv_bridge
+#   lane_msgs
+#   image_transport
+# )
+#
+# install(TARGETS ${PROJECT_NAME}_node DESTINATION lib/${PROJECT_NAME})
+# ament_package()
