--- a/srcs/test_yolo_engine/CMakeLists.txt
+++ b/srcs/test_yolo_engine/CMakeLists.txt
@@ -4,6 +4,7 @@ project(test_yolo)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_COMPILE_FLAGS "-g")
 
 set(CUDA_TOOLKIT_ROOT_DIR "/usr/local/cuda-10.2")
 set(CMAKE_CUDA_COMPILER "${CUDA_TOOLKIT_ROOT_DIR}/bin/nvcc")
@@ -18,6 +19,7 @@ include_directories(${TENSORRT_INCLUDE_DIRS})
 link_directories(${TENSORRT_LIB_DIR})
 
 find_package(OpenCV REQUIRED COMPONENTS core imgproc highgui cudaimgproc cudawarping cudafilters)
+find_package(fmt REQUIRED)
 
 include_directories(includes)
 
@@ -35,28 +37,5 @@ target_link_libraries(${PROJECT_NAME}
   nvinfer_plugin
   ${CUDA_LIBRARIES}
   stdc++fs
+  fmt::fmt
 )
-
-#
-#
-# //////
-#
-#
-#
-# target_link_libraries(${PROJECT_NAME}_node
-#   ${OpenCV_LIBS}
-#   nvinfer
-#   nvinfer_plugin
-#   cudart  # From CUDA
-# )
-#
-# ament_target_dependencies(${PROJECT_NAME}_node
-#   rclcpp
-#   sensor_msgs
-#   cv_bridge
-#   lane_msgs
-#   image_transport
-# )
-#
-# install(TARGETS ${PROJECT_NAME}_node DESTINATION lib/${PROJECT_NAME})
-# ament_package()
