Inference on 1 pic + save output

--- a/srcs/test_yolo_engine/CMakeLists.txt
+++ b/srcs/test_yolo_engine/CMakeLists.txt
@@ -18,7 +18,7 @@ set(TENSORRT_LIB_DIR "/usr/lib/aarch64-linux-gnu")
 include_directories(${TENSORRT_INCLUDE_DIRS})
 link_directories(${TENSORRT_LIB_DIR})
 
-find_package(OpenCV REQUIRED COMPONENTS core imgproc highgui cudaimgproc cudawarping cudafilters)
+find_package(OpenCV REQUIRED COMPONENTS core imgproc highgui cudaimgproc cudawarping cudafilters dnn)
 find_package(fmt REQUIRED)
 
 include_directories(includes)
